<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".LogFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="377dp"
            android:layout_height="288dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <TextView
                android:id="@+id/TVUser"
                android:layout_width="match_parent"
                android:layout_height="26dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/aladin"
                android:text="@string/username"
                android:textColor="@color/Lpink"
                android:textColorHighlight="@color/black"
                android:textFontWeight="@integer/material_motion_duration_short_1"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:height="48dp"
                android:autofillHints="emailAddress"
                android:background="#50ffffff"
                android:drawableLeft="@drawable/person"
                android:drawablePadding="5dp"
                android:ems="10"
                android:fontFamily="serif"
                android:hint="@string/username"
                android:inputType="text"
                android:padding="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <TextView
                android:id="@+id/TVPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/aladin"
                android:text="@string/pass"
                android:textColor="@color/Lpink"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:background="#50ffffff"
                android:drawableLeft="@drawable/baseline_groups_24"
                android:drawablePadding="5dp"
                android:ems="10"
                android:fontFamily="serif"
                android:hint="@string/pass"
                android:padding="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnProceed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/RedO"
                android:gravity="center"
                android:shadowColor="@color/white"
                android:text="Proceed"
                android:textSize="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="335dp"
                android:layout_height="167dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/nocturnallogo" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/berkshire_swash"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@color/BlueO"
                android:textColorHighlight="@color/white"

                android:textColorLink="@color/BlueO"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>